--- a/package.json
+++ b/package.json
@@ -6,28 +6,56 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
-    "test": "jest --watchAll=false"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write .",
+    "check": "npm run lint && npm run typecheck",
+    "prepare": "husky",
+    "dev:watch": "concurrently -k \"next dev\" \"tsc -w --noEmit\""
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "printWidth": 100,
+    "semi": true
   },
   "dependencies": {
-    "next": "14.x",
-    "react": "18.x",
-    "react-dom": "18.x"
+    "next": "14.2.33",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.21",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.x",
-    "jest": "^29.7.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.13",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.2.1",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.21",
+    "autoprefixer": "10.4.19",
+    "concurrently": "^9.2.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.33",
+    "husky": "^9.1.7",
+    "jest": "29.7.0",
+    "lint-staged": "^16.2.3",
+    "postcss": "8.4.38",
+    "prettier": "^3.6.2",
+    "tailwindcss": "3.4.14",
+    "ts-jest": "29.1.2",
+    "typescript": "5.6.3"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,css}": [
+      "prettier --write"
+    ]
   }
 }
